--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ a {
 
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -64,4 +66,33 @@ body {
   left: -23px;
   top: -3px;
   background-image: url('../images/icon-phone.svg');
+}
+
+/* *********************************** */
+/* ************** FOOTER ************* */
+
+.footer {
+  padding: 40px 0 34px;
+  background-color: #ffffff;
+}
+
+.footer-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-contacts {
+  display: flex;
+  flex-direction: column;
+  width: 230px;
+}
+
+.email {
+  margin: 17px 0;
+}
+
+.footer-social-list {
+  display: flex;
+  gap: 15px;
 }
