--- a/css/style.css
+++ b/css/style.css
@@ -345,3 +345,32 @@ body {
     flex-direction: column;
   }
 }
+
+@media (max-width: 360px) {
+  .top {
+    padding: 30px 0 50px;
+  }
+
+  .top-content {
+    width: 203px;
+    padding-top: 30px;
+  }
+
+  .top-title {
+    font-size: 18px;
+  }
+
+  .top-text {
+    font-size: 10px;
+  }
+
+  .top-img {
+    /* left: 209px; */
+    left: auto;
+    right: 0;
+  }
+
+  .top-image {
+    width: 162px;
+  }
+}
