add about section styles for 1000px

--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,14 @@ body {
   .top-image {
     width: 655px;
   }
+
+  .about-content {
+    min-width: 300px;
+  }
+
+  .about-list {
+    padding-left: 20px;
+  }
 }
 
 @media (max-width: 900px) {
