--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ body {
   bottom: 0;
   width: 22px;
   height: 30px;
-  background-image: url('../images/about-decor.png');
+  background-image: url('../images/section-decor.png');
 }
 
 .about-list::after {
