--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,26 @@ button {
   cursor: pointer;
 }
 
+.title {
+  margin-bottom: 15px;
+  font-family: 'Yeseva One', sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+}
+
+.section {
+  padding-bottom: 150px;
+}
+
+.button {
+  padding: 18px 54px;
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  color: #272727;
+  background-color: #ffbd59;
+}
+
 .container {
   max-width: 1182px;
   padding: 0 10px;
@@ -147,6 +167,7 @@ body {
 
 .about {
   padding: 50px 0 50px;
+  margin-bottom: 150px;
   color: #fafafa;
   background-color: #a5978e;
 }
@@ -158,12 +179,6 @@ body {
 
 .about-content {
   min-width: 370px;
-}
-
-.about-title {
-  margin-bottom: 15px;
-  font-family: 'Yeseva One', sans-serif;
-  font-size: 40px;
 }
 
 .about-text + .about-text {
@@ -206,6 +221,63 @@ body {
 
 .about-item-text {
   font-size: 11px;
+}
+
+/* *********************************** */
+/* ************* PRODUCTS ************ */
+
+.section-inner {
+  display: grid;
+  grid-template-columns: 370px auto;
+}
+
+.products-content-descr {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.products-content {
+  gap: 50px 93px;
+}
+
+.products-item {
+  width: 290px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.products-item-img {
+  margin-bottom: 8px;
+}
+
+.products-item-price {
+  margin-bottom: 12px;
+  font-family: 'Yeseva One', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  color: #000;
+}
+
+.products-item-title {
+  margin-bottom: 16px;
+  font-family: 'Yeseva One', sans-serif;
+  /* font-weight: 400; */
+  font-size: 16px;
+  color: #000;
+}
+
+.products-item-text {
+  margin-bottom: 27px;
+  font-size: 12px;
+}
+
+.button {
+  padding: 18px 54px;
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  color: #272727;
+  background-color: #ffbd59;
 }
 
 /* *********************************** */
