add styles for the courses section

--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,48 @@ body {
 }
 
 /* *********************************** */
+/* ************** COURSES ************* */
+
+.courses-item-img {
+  position: relative;
+  /* width: 268px; */
+  font-family: 'Yeseva One', sans-serif;
+  font-weight: 400;
+  font-size: 11px;
+  color: #fff;
+}
+
+.courses-title {
+  padding: 15px 15px 15px 10px;
+  left: 9px;
+  bottom: 157px;
+}
+
+.courses-time {
+  padding: 7px 16px 7px 10px;
+  left: 9px;
+  bottom: 115px;
+}
+
+.courses-time span {
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 10px;
+}
+
+.courses-price {
+  padding: 19px 19px 19px 10px;
+  right: 0;
+  bottom: 2px;
+}
+
+.courses-title,
+.courses-time,
+.courses-price {
+  background-color: #bea495;
+  position: absolute;
+}
+
+/* *********************************** */
 /* ************** FOOTER ************* */
 
 .footer {
