add content to the certificates-content block

--- a/css/style.css
+++ b/css/style.css
@@ -484,6 +484,12 @@ body {
 }
 
 /* *********************************** */
+/* ************** certificates ************* */
+.certificates-slider {
+  width: 768px;
+}
+
+/* *********************************** */
 /* ************** FOOTER ************* */
 
 .footer {
