--- a/css/style.css
+++ b/css/style.css
@@ -500,7 +500,7 @@ body {
 
 .certificates-content .swiper-pagination {
   bottom: 60px;
-  text-align: left;
+  /* text-align: left; */
 }
 
 /* *********************************** */
@@ -599,6 +599,22 @@ body {
 
   .team {
     padding: 50px 0;
+  }
+
+  .feedback-inner {
+    grid-template-columns: 260px auto;
+  }
+
+  .feedback-slider {
+    width: 690px;
+  }
+
+  .certificates-slider {
+    width: 880px;
+  }
+
+  .certificates-content img {
+    width: 280px;
   }
 }
 
@@ -809,6 +825,51 @@ body {
   .team-item-descr {
     font-size: 7px;
   }
+
+  .feedback-item-video {
+    width: 200px;
+  }
+
+  .feedback-item-img {
+    width: 200px;
+  }
+
+  .feedback-slider {
+    width: 447px;
+  }
+
+  .feedback-item-content {
+    padding-bottom: 45px;
+  }
+
+  .feedback-item-btn {
+    padding: 15px 20px;
+    font-size: 8px;
+  }
+
+  .feedback-content {
+    padding-bottom: 79px;
+  }
+
+  .feedback-item-text {
+    margin-bottom: 38px;
+  }
+
+  .swiper-pagination-bullet {
+    width: 28px;
+  }
+
+  .feedback-content .swiper-pagination {
+    bottom: 80px;
+  }
+
+  .feedback-item-btn {
+    bottom: 4px;
+  }
+
+  .feedback-item {
+    align-items: start;
+  }
 }
 
 @media (max-width: 640px) {
@@ -951,6 +1012,15 @@ body {
 
   .team {
     margin-bottom: 50px;
+  }
+
+  .certificates-content img {
+    width: 200px;
+  }
+
+  .certificates-slider {
+    width: 420px;
+    margin: 0 auto;
   }
 }
 
@@ -1159,5 +1229,48 @@ body {
   .courses-price {
     right: 6px;
     left: auto;
+  }
+
+  .feedback-item {
+    grid-template-columns: auto;
+    text-align: center;
+  }
+
+  .feedback-slider {
+    width: 250px;
+    margin: 0 auto;
+  }
+
+  .feedback-item-video {
+    width: 250px;
+  }
+
+  .feedback-item-img {
+    width: 250px;
+    margin: 0 auto 12px;
+  }
+
+  .feedback-item-btn {
+    bottom: 0;
+    left: 0;
+    max-width: 124px;
+    margin: 0 auto;
+  }
+
+  .feedback-item-text {
+    margin-bottom: 0;
+  }
+
+  .feedback-content {
+    padding-bottom: 94px;
+  }
+
+  .feedback-content .swiper-pagination {
+    bottom: 60px;
+  }
+
+  .certificates-slider {
+    width: 200px;
+    margin: 0 auto;
   }
 }
